--- a/angular13/src/app/company/category/category-adm/category-adm.component.html
+++ b/angular13/src/app/company/category/category-adm/category-adm.component.html
@@ -91,7 +91,7 @@
                 </div>
             </tab>
             <tab heading="CADASTRO" class="col-12">
-                <category-insert></category-insert>
+                <!-- <category-insert></category-insert> -->
             </tab>
         </tabset>
     </div>
