--- a/angular13/src/app/company/measure/measure-adm/measure-adm.component.html
+++ b/angular13/src/app/company/measure/measure-adm/measure-adm.component.html
@@ -79,9 +79,9 @@
                     </div>
                 </div>
             </tab>
-            <tab heading="CADASTRO " class="col-12 ">
-                <measure-insert></measure-insert>
-            </tab>
+            <!-- <tab heading="CADASTRO " class="col-12 ">
+
+            </tab> -->
         </tabset>
     </div>
 
