--- a/angular13/src/app/company/product/product-insert/product-insert.component.html
+++ b/angular13/src/app/company/product/product-insert/product-insert.component.html
@@ -25,7 +25,7 @@
 
                         <div class="p-1"></div>
                         <div *ngIf="!catToShow()">
-                            <button class="btn btn-danger col-12" style=" color: rgb(255, 255, 255); font-size: 25px;" [routerLink]="['/catinsert']">Cadastrar Categorias</button>
+                            <!-- <button class="btn btn-danger col-12" style=" color: rgb(255, 255, 255); font-size: 25px;" [routerLink]="['/catinsert']">Cadastrar Categorias</button> -->
                         </div>
 
                         <div class="p-1"></div>
@@ -61,7 +61,7 @@
                                 </div>
                                 <div class="col-4">
                                     <div *ngIf="!measureToShow()">
-                                        <button class="btn btn-danger col-12" style="color: rgb(255, 255, 255); font-size: 25px; " [routerLink]="['/measureinsert']">Cadastrar Medidas</button>
+                                        <!-- <button class="btn btn-danger col-12" style="color: rgb(255, 255, 255); font-size: 25px; " [routerLink]="['/measureinsert']">Cadastrar Medidas</button> -->
                                     </div>
                                     <div *ngIf="measureToShow()">
 
