--- a/angular13/src/app/company/product/product-pagelist/product-pagelist.component.html
+++ b/angular13/src/app/company/product/product-pagelist/product-pagelist.component.html
@@ -91,9 +91,9 @@
                     </pagination>
                 </div>
             </tab>
-            <tab heading="CADASTRO ">
-                <product-insert></product-insert>
-            </tab>
+            <!-- <tab heading="CADASTRO ">
+
+            </tab> -->
         </tabset>
     </div>
 
