--- a/angular13/src/app/company/shared/components/login/entrance/login.component.html
+++ b/angular13/src/app/company/shared/components/login/entrance/login.component.html
@@ -18,7 +18,7 @@
                 <div class="container">
                     <div class="row">
 
-                        <input class="form-control" type="text" placeholder="Nome de Usuário" formControlName="email" [(ngModel)]="userdto.email">
+                        <input class="form-control" type="text" placeholder="Nome de Usuário" formControlName="username" [(ngModel)]="userdto.username">
                         <div class="pt-3"></div>
 
                         <input class="form-control" type="password" placeholder="Senha" formControlName="password" [(ngModel)]="userdto.password">
