--- a/angular13/src/app/company/shared/components/login/entrance/login.component.html
+++ b/angular13/src/app/company/shared/components/login/entrance/login.component.html
@@ -14,24 +14,24 @@
             <div class="pt-3"></div>
         </div>
         <div>
-            <form [formGroup]="form" (ngSubmit)="submit()">
+            <form [formGroup]="_AuthenticationService.form">
                 <div class="container">
                     <div class="row">
 
-                        <input class="form-control" type="text" placeholder="Nome de Usuário" formControlName="username" [(ngModel)]="userdto.username">
+                        <input class="form-control" type="text" placeholder="Nome de Usuário" formControlName="username" formControlName="username">
                         <div class="pt-3"></div>
 
-                        <input class="form-control" type="password" placeholder="Senha" formControlName="password" [(ngModel)]="userdto.password">
+                        <input class="form-control" type="password" placeholder="Senha" formControlName="password" formControlName="password">
 
                     </div>
                 </div>
 
-                <p *ngIf="error" class="error">
+                <!-- <p *ngIf="error" class="error">
                     {{ error }}
-                </p>
+                </p> -->
                 <div class="pt-3"></div>
                 <div class="button">
-                    <button class="btn btn-warning" type="submit" (click)="toLogin()">Entrar</button>
+                    <button class="btn btn-warning" type="button" (click)="submit()">Entrar</button>
                 </div>
                 <div>
                     <small style="color:red;">{{loginInfo}}</small>
