--- a/angular13/src/app/company/shared/components/side-nav/side-nav.component.html
+++ b/angular13/src/app/company/shared/components/side-nav/side-nav.component.html
@@ -69,7 +69,7 @@
                 <li>
                     <hr class="dropdown-divider">
                 </li>
-                <li><button class="dropdown-item" type="button" (click)="_LogServices.logout()"><i
+                <li><button class="dropdown-item" type="button" (click)="quit()"><i
           class="bi bi-box-arrow-right"></i> Sair</button></li>
             </ul>
 
