--- a/angular13/src/app/company/shared/components/side-nav/side-nav.component.html
+++ b/angular13/src/app/company/shared/components/side-nav/side-nav.component.html
@@ -1,4 +1,4 @@
-<div class="sidebar-nav bg-black" *ngIf="isAuthenticated()">
+<div class="sidebar-nav bg-black" *ngIf="_AuthenticationService.IsAuthenticated">
     <nav class="navbar navbar-dark bg-warning ">
         <!-- style=" color:rgb(255, 115, 0);" -->
         <div class="container">
