--- a/angular13/src/app/company/category/category-adm/category-adm.component.html
+++ b/angular13/src/app/company/category/category-adm/category-adm.component.html
@@ -1,91 +1,89 @@
-<div id="general">
+<div class="mt-3 justify-content-center">
 
-
-
-    <div>
-        <tabset>
-
-
-
-            <tab heading="TODOS">
-                <div class="container">
-                    <div class="row">
-
-                        <br>
-
-
-
-
-                        <div class="container">
-
-                            <div class="row">
-                                <div class="col-6" style="color: rgb(255, 193, 7);">
-                                    <div class=" justify-content-center" style="font-size: 80px; color: rgb(0, 0, 0); text-shadow: 0 0 1px #ff9900, 0 0 7px #f08e1f;">
-                                        <div class="pt-5"></div>
-                                    </div>
-
-                                </div>
-                                <div class="col-6" style="padding-right: 400px; color: rgb(255, 193, 7);">
-                                    <div class="col-4 pt-5" style="font-size: 30px; ">
-                                        CATEGORIAS SUBCATEGORIAS
-                                    </div>
-
-                                </div>
-                            </div>
-                        </div>
-                        <hr>
-                        <div class="container">
-
-                            <div class="row">
-                                <div class="col-6" style="color: rgb(255, 193, 7);">
-                                    <h1>CATEGORIAS</h1>
-                                </div>
-                                <div class="col-6" style="padding-right: 400px; color: rgb(255, 193, 7);">
-                                    <h1>AÇÕES</h1>
-
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <br>
-                    <div class="container">
-                        <div class="row" *ngFor="let cat of this.categories">
-                            <div class="col-6">
-                                {{cat.name}}
-                            </div>
-
-                            <!-- <div class="col-2">
-
-                            </div> -->
-                            <div class="col-6">
-                                <div class="btn-group " dropdown>
-                                    <button id="button-basic " dropdownToggle type="button " class="btn btn-warning dropdown-toggle " aria-controls="dropdown-basic " style="background-color: rgb(255, 193, 7); color: rgb(0, 0, 0); font-size: 15px; "><span
-                      class="caret "></span><i class="bi bi-list "></i>
-                  </button>
-                                    <div>
-                                        <ul id="dropdown-basic " *dropdownMenu class="dropdown-menu " role="menu " aria-labelledby="button-basic " style="background-color: rgb(255, 245, 160); color: white; width:50px; height: 50px; ">
-                                            <li role="menuitem "><a class="dropdown-item " formControlName="categoryId ">Delete</a></li>
-                                        </ul>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="pb-3"></div>
-                            <hr>
-
-
-                        </div>
-                    </div>
-                </div>
-            </tab>
-            <tab heading="CADASTRO" class="col-12">
-                <!-- <category-insert></category-insert> -->
-            </tab>
-        </tabset>
-    </div>
-
-
-
-
+    <section class="bg-warning">
+        <h1 class="text-center">
+            Categorias
+        </h1>
+    </section>
 </div>
+<div class="pt-3 pb-3"></div>
+<section class="container">
+    <section class="row align-items-" *ngFor="let cat of this.categories">
+        <ul class="list-group">
+            <div class="row ">
+
+
+                <div class="row align-self-end" style="background-color: rgb(255,197,7);">
+
+
+                    <section class="pt-2 col-7">
+                        <!-- <h6>Quantidade: <span class="badge bg-success ">{{cat.name}}</span></h6> -->
+                        <h3>{{cat.name | uppercase}}</h3>
+
+                    </section>
+                    <div class="col-3"></div>
+                    <section class="col-2 pr-5 pt-2 pb-2 ">
+                        <button tooltip="Deletar {{cat.name}}" class="btn btn-outline-dark bi bi-trash  "></button>
+                        <button tooltip="Editar {{cat.name}}" class="btn btn-outline-dark bi bi-pen "></button>
+                        <button tooltip="Detalhes {{cat.name}}" class="btn btn-outline-dark bi bi-info-square "></button>
+                    </section>
+
+
+
+                </div>
+                <!-- <div class id="hr">
+              </div> -->
+                <!-- <dir class="btn-group">
+                  <button class="btn btn-outline-danger bi bi-trash3">sssssssssssssss</button>
+
+              </dir> -->
+            </div>
+        </ul>
+
+
+        <div style="height:30px; background-color: white;"></div>
+
+
+
+
+
+
+    </section>
+</section>
+
+
+
+
+
+
+
+
+
+<!-- <div class="container">
+    <div class="row">
+        <div *ngFor="let cat of this.categories" style="background-color: rgb(211, 162, 2);">
+            <div class="mb-3">
+            </div>
+
+            <table class="col-12">
+                <thead class="col-12 align-self-end">AÇÕES</thead>
+                <tr class="row">
+                    <td class="col-6">
+                        <h3 style="color: white;">{{cat.name | uppercase}}</h3>
+                    </td>
+                    <td class="col-6">
+                        <button class="btn btn-outline-dark bi bi-trash justify-content-end " tooltip=" Deletar {{cat.name}} " (click)="12 "></button>
+                        <button class="btn btn-outline-dark bi bi-pen justify-content-end " tooltip="Editar {{cat.name}} "></button>
+                        <button class="btn btn-outline-dark bi bi-info-square justify-content-end " tooltip="Detalhes {{cat.name}} "></button>
+                    </td>
+                </tr>
+            </table>
+
+            <div class="mt-3 ">
+            </div>
+            <hr style=" background: rgb(255, 210, 60); box-shadow: 5 8px 32px 6 rgba(0, 0, 0, 0.37); border-radius: 10px; border: 1px solid rgb(0, 0, 0); ">
+
+        </div>
+
+    </div>
+</div> -->
