--- a/angular13/src/app/company/product/product-pagelist/product-pagelist.component.html
+++ b/angular13/src/app/company/product/product-pagelist/product-pagelist.component.html
@@ -1,15 +1,18 @@
+<div class="mt-3 justify-content-center">
+
+    <section class="bg-warning">
+        <h1 class="text-center">
+            Produtos
+        </h1>
+    </section>
+
+
+</div>
+
 <div class="container">
     <div class="mt-3"></div>
     <div class="row">
 
-        <section class="bg-warning">
-            <h1 class="text-center">
-                Produtos
-            </h1>
-        </section>
-        <div class="mb-3">
-
-        </div>
         <section *ngFor="let prod of products">
             <ul class="list-group">
                 <div class="row">
