--- a/angular13/src/app/company/product/product-pagelist/product-pagelist.component.html
+++ b/angular13/src/app/company/product/product-pagelist/product-pagelist.component.html
@@ -1,18 +1,22 @@
-<div class="mt-3 justify-content-center">
-
+<!-- <div class="mt-3 justify-content-center">
     <section class="bg-warning">
         <h1 class="text-center">
-            Produtos
+            <i class="bi bi-boxes align-self-start"></i> Produtos
         </h1>
     </section>
 
 
-</div>
+</div> -->
+
 
 <div class="container">
+    <div class="row bi bi-boxes pt-4 pb-4 pl-4" style="font-size: 80px; color: rgb(0, 0, 0); text-shadow: 0 0 1px #ff9900, 0 0 7px #f08e1f;">
+        <div class="col-6 align-self-center" style="font-size: 30px;">
+            PRODUTOS
+        </div>
+    </div>
     <div class="mt-3"></div>
     <div class="row">
-
         <section *ngFor="let prod of products">
             <ul class="list-group">
                 <div class="row">
