--- a/angular13/src/app/company/category/category-adm/category-adm.component.html
+++ b/angular13/src/app/company/category/category-adm/category-adm.component.html
@@ -1,13 +1,18 @@
-<div class="mt-3 justify-content-center">
+<!-- <div class="mt-3 justify-content-center">
 
     <section class="bg-warning">
         <h1 class="text-center">
             Categorias
         </h1>
     </section>
-</div>
+</div> -->
 <div class="pt-3 pb-3"></div>
 <section class="container">
+    <div class="row bi bi-tags pt-4 pb-4 " style="font-size: 80px; color: rgb(0, 0, 0); text-shadow: 0 0 1px #ff9900, 0 0 7px #f08e1f;">
+        <div class="col-6 align-self-center" style="font-size: 30px;">
+            Categorias
+        </div>
+    </div>
     <section class="row align-items-" *ngFor="let cat of this.categories">
         <ul class="list-group">
             <div class="row ">
