--- a/angular13/src/app/company/product/product-pagelist/product-pagelist.component.html
+++ b/angular13/src/app/company/product/product-pagelist/product-pagelist.component.html
@@ -1,19 +1,16 @@
-<!-- <div class="mt-3 justify-content-center">
-    <section class="bg-warning">
-        <h1 class="text-center">
-            <i class="bi bi-boxes align-self-start"></i> Produtos
-        </h1>
-    </section>
-
-
-</div> -->
-
-
 <div class="container">
     <div class="row bi bi-boxes pt-4 pb-4 pl-4" style="font-size: 80px; color: rgb(0, 0, 0); text-shadow: 0 0 1px #ff9900, 0 0 7px #f08e1f;">
-        <div class="col-6 align-self-center" style="font-size: 30px;">
+        <div class="col-6 align-self-center" style="font-size: 60px;">
             PRODUTOS
         </div>
+        <div class="pt-4"></div>
+        <label style="font-size: 30px;">Pesquisar</label>
+
+        <section class="bg-warning" style="width:525px; height: 60px; border-radius: 15px;">
+
+            <input class="form-control" (input)="filterProducts($event)" type="text" style="width:500px; margin-top: 10px;">
+
+        </section>
     </div>
     <div class="mt-3"></div>
     <div class="row">
@@ -24,15 +21,8 @@
                         <h3 style="color: white;">{{prod.name | uppercase}}</h3>
 
                     </ol>
-                    <!-- <ol class="col-2 list-group-item list-group-item-warning">
-                        <div class="col-2">{{prod.quantity}}</div>
-                    </ol> -->
                     <div class="list-group-item-warning">
-
-
                         <div class="row">
-
-
                             <div class="pt-2 col-9 align-self-end">
                                 <h6>Quantidade: <span class="badge bg-success ">{{prod.quantity}}</span></h6>
                                 <h6>Preço: <span class="badge bg-success ">{{prod.price | currency:'R$ ':true}}</span></h6>
