--- a/angular13/src/app/company/shared/components/register/register.component.html
+++ b/angular13/src/app/company/shared/components/register/register.component.html
@@ -24,7 +24,7 @@
                     <label for="">USUÁRIO</label>
                     <div class="row pt-3"></div>
 
-                    <input type="text" class="form-control" formControlName="username">
+                    <input type="text" class="form-control" formControlName="userName">
                 </div>
                 <div class="row">
                     <div class="row pt-3"></div>
@@ -36,7 +36,7 @@
                     <div class="row pt-3"></div>
                     <label for="">CONFIRMAR SENHA</label>
                     <div class="row pt-3"></div>
-                    <input type="password" class="form-control" formControlName="passwordconfirm">
+                    <input type="password" class="form-control" formControlName="confirmPassword">
                 </div>
 
 
