--- a/angular13/src/app/company/shared/components/side-nav/side-nav.component.html
+++ b/angular13/src/app/company/shared/components/side-nav/side-nav.component.html
@@ -38,7 +38,7 @@
                   data-bs-dismiss="offcanvas">Medidas</span></a>
                         </li>
                         <div class="pt-1"></div>
-                        <li><a><i class="bi bi-pen"></i> <span class="item-text" [routerLink]="['/register']"
+                        <li><a><i class="bi bi-pen"></i> <span class="item-text" [routerLink]="['/record']"
                   data-bs-dismiss="offcanvas">Cadastros</span></a></li>
                     </ul>
                     <hr>
